# bpt-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/bpt/: __main__.py  main.py
